# pr-assistant

./: CITATION.cff  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-and-test.yaml  pr-assistant-review.yaml  smokeshow.yml  test-redistribute.yml  test.yml
docs/docs/: index.md
pr_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pr_assistant/algo/: pr_processing.py  utils.py
pr_assistant/git_providers/: azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_assistant/identity_providers/: __init__.py  default_identity_provider.py
pr_assistant/secret_providers/: __init__.py
pr_assistant/servers/: atlassian-connect.json  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py
pr_assistant/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_description.py  pr_generate_labels.py  pr_help_message.py  pr_information_from_user.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py
scripts/: format.sh  lint.sh  test.sh
tests/e2e_tests/: e2e_utils.py  test_bitbucket_app.py  test_github_app.py  test_gitlab_webhook.py
tests/unittest/: test_clip_tokens.py  test_codecommit_client.py  test_codecommit_provider.py  test_convert_to_markdown.py  test_delete_hunks.py  test_extend_patch.py  test_file_filter.py  test_find_line_number_of_relevant_line_in_file.py  test_fix_output.py  test_github_action_output.py  test_handle_patch_deletions.py  test_language_handler.py  test_load_yaml.py  test_try_fix_yaml.py  (+1 more)
(+36 files in other folders)
