[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pr-assistant"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"

description = "KhulnaSoft PR-Assistant aims to help efficiently review and handle pull requests, by providing AI feedbacks and suggestions."
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review"]
authors = [
    { name = "KhulnaSoft DevOps", email = "info@khulnasoft.com" },
]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Khulnasoft/pr-assistant"
"Documentation" = "https://pr-assistant-docs.khulnasoft.com/"

[tool.coverage.run]
parallel = true
source = [
    "docs_src",
    "tests",
    "pr-assistant"
]

[tool.ruff]

line-length = 124

select = [
  "E",  # Pyflakes
  "F",  # Pyflakes
  "B",  # flake8-bugbear
  "I001",  # isort basic checks
  "I002",  # isort missing-required-import
  ]

# First commit - only fixing isort
fixable = [
  "I001",  # isort basic checks
]

unfixable = [
  "B",  # Avoid trying to fix flake8-bugbear (`B`) violations.
  ]

exclude = [
  "api/code_completions",
]

ignore = [
  "E999",
  "B008",
  "B904",
  "E501",
  "F541",
  "E722",
  "E721",
  "F401",
  "B007",
  "F821",
  "F841",
  "B011",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]  # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
# TODO: should decide if maybe not to ignore these.

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
